--- a/src/app/prinput/prinput-preview/prinput-preview.component.html
+++ b/src/app/prinput/prinput-preview/prinput-preview.component.html
@@ -18,18 +18,18 @@
     </thead>
     <tbody>
       <tr *ngFor="let prinputdata of prinputdatas">
-        <!-- <td>{{ prinputdata.prno }}</td>
-        <td>{{ prinputdata.costcenter }}</td>
-        <td>{{ prinputdata.glcost }}</td>
+        <td>{{ prinputdata.prnumber }}</td>
+        <td>{{ prinputdata.prprofitarea }}</td>
+        <td>{{ prinputdata.prinvnumber }}</td>
         <td>{{ prinputdata.prdate }}</td>
-        <td>{{ prinputdata.itemdesc }}</td>
-        <td>{{ prinputdata.unitprice }}</td>
-        <td>{{ prinputdata.qty }}</td>
-        <td>{{ prinputdata.unit }}</td>
-        <td>{{ prinputdata.amountprice }}</td>
-        <td>{{ prinputdata.suppliername }}</td>
-        <td>{{ prinputdata.duedate }}</td>
-        <td>{{ prinputdata.remark }}</td> -->
+        <td>{{ prinputdata.pritemdesc }}</td>
+        <td>{{ prinputdata.prunitprice }}</td>
+        <td>{{ prinputdata.prqty }}</td>
+        <td>{{ prinputdata.prunit }}</td>
+        <td>{{ prinputdata.prtotalprice }}</td>
+        <td>{{ prinputdata.prsuppliername }}</td>
+        <td>{{ prinputdata.prdlvdate }}</td>
+        <td>{{ prinputdata.prremark }}</td>
       </tr>
     </tbody>
   </table>
